--- a/Example/ConfigKit/Info.plist
+++ b/Example/ConfigKit/Info.plist
@@ -2,6 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CONFIG_BRANCH</key>
+	<string>testBranch</string>
+	<key>CONFIG_ACCOUNT</key>
+	<string>testAcc</string>
+	<key>CONFIG_FIXED</key>
+	<false/>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
