--- a/Example/Podfile
+++ b/Example/Podfile
@@ -3,10 +3,11 @@ use_frameworks!
 target 'ConfigKit_Example' do
   pod 'ConfigKit', :path => '../'
   pod 'ReachabilitySwift'
+  pod 'DictionaryUtils'
 
   target 'ConfigKit_Tests' do
     inherit! :search_paths
-
+    
     pod 'FBSnapshotTestCase'
     
   end
